--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateKey.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateKey.mxml
@@ -50,16 +50,16 @@
 	
 	<mx:HRule width="100%"/>
 		
-	<mx:VBox styleName="dlgContent" height="100%">
-		<mx:Grid>
+	<mx:VBox styleName="dlgContent" width="100%" height="100%">
+		<mx:Grid width="100%" height="100%">
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%">
 					<mx:Label text="{LanguageManager.sentences.msg_input_template_key}:"/>
 				</mx:GridItem>
 			</mx:GridRow>
 			<mx:GridRow width="100%" height="100%">
-				<mx:GridItem width="100%" height="100%">
-					<mx:TextInput id="txtKey" width="230"/>
+				<mx:GridItem width="100%" height="100%" horizontalAlign="center">
+					<mx:TextInput id="txtKey" width="90%"/>
 				</mx:GridItem>
 			</mx:GridRow>
 		</mx:Grid>
@@ -67,7 +67,7 @@
 
 	<mx:HRule width="100%"/>
 	
-	<mx:ControlBar width="100%" styleName="dlgFooter">
+	<mx:ControlBar styleName="dlgFooter" width="100%">
 	</mx:ControlBar>
 	
 </ModalDialog>
